Commented qsip package install (should only do it manually)

--- a/testing/example_dataset_creation_and_testing.Rmd
+++ b/testing/example_dataset_creation_and_testing.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r include=F}
-devtools::install_github('bramstone/qsip', ref='regroup')
+# devtools::install_github('bramstone/qsip', ref='regroup')
 library(phyloseq)
 library(qsip)
 library(ggplot2)
