Comparison of atom excess code 000

--- a/testing/example_dataset_creation_and_testing.Rmd
+++ b/testing/example_dataset_creation_and_testing.Rmd
@@ -450,5 +450,54 @@ mdq <- specify_qsip(md,
 # calculate atom excess
 mdq <- calc_excess(mdq, separate_label=F, separate_light=F)
 
-# manual calculation
+# convert to data frame, use c() to remove attributes
+ae <- data.frame(OTU=names(mdq@qsip[['atom_excess']]),
+                 excess=c(mdq@qsip[['atom_excess']]),
+                 stringsAsFactors=F)
+
+ae_qsip <- ae
+
+
+# manual calculation-------------------------------------------
+ae <- mw_000[,!names(mw_000) %in% 'mw_qsip']
+
+# separate MW-light and MW-label
+aeh <- ae[ae$tmt=='18O',]
+ael <- ae[ae$tmt=='16O',]
+
+# calculate MW-heavymax
+adjust <- 12.07747
+nat_abund <- 0.002000429
+ael$mw_max <- (adjust + ael$mw_manual)
+    
+# merge, disregarding tmt
+ae <- merge(aeh[,!names(aeh) %in% 'tmt'], 
+            ael[,!names(ael) %in% 'tmt'],
+            by='OTU',
+            suffixes=c('_label', '_light'))
+
+# calculate atom excess
+ae <- within(ae, {
+  excess <- ((mw_manual_label - mw_manual_light)/(mw_max - mw_manual_light)) * (1 - nat_abund)
+})
+
+
+# compare calculations-----------------------------------------
+ae_000 <- merge(ae_qsip,
+                ae[,c('OTU', 'excess')],
+                by='OTU',
+                suffixes=c('_qsip', '_manual'))
+
+# plot qSIP output against manual output
+ggplot(ae_000, aes(excess_manual, excess_qsip)) +
+  geom_abline(aes(slope=1, intercept=0), color=hsv(0, 1, .8)) +
+  geom_point(color=hsv(.55, 1, .4)) +
+  xlab('Manual calculation') +
+  ylab('qSIP package') +
+  xlim(min(c(ae_000$excess_manual, ae_000$excess_qsip)), 
+       max(c(ae_000$excess_manual, ae_000$excess_qsip))) +
+  ylim(min(c(ae_000$excess_manual, ae_000$excess_qsip)), 
+       max(c(ae_000$excess_manual, ae_000$excess_qsip))) +
+  labs(title='Comparison of atom excess values', 
+       subtitle='Calculation code: 000')
 ```
