--- a/testing/example_dataset_creation_and_testing.Rmd
+++ b/testing/example_dataset_creation_and_testing.Rmd
@@ -503,8 +503,7 @@ gg_ae_000 <- ggplot(ae_000, aes(excess_manual, excess_qsip)) +
        max(c(ae_000$excess_manual, ae_000$excess_qsip))) +
   ylim(min(c(ae_000$excess_manual, ae_000$excess_qsip)), 
        max(c(ae_000$excess_manual, ae_000$excess_qsip))) +
-  labs(title='Comparison of EAF values', 
-       subtitle='Calculation code: 000')
+  labs(title='Calculation code: 000')
 ```
 
 
@@ -571,8 +570,7 @@ gg_ae_001 <- ggplot(ae_001, aes(excess_manual, excess_qsip)) +
        max(c(ae_001$excess_manual, ae_001$excess_qsip))) +
   ylim(min(c(ae_001$excess_manual, ae_001$excess_qsip)), 
        max(c(ae_001$excess_manual, ae_001$excess_qsip))) +
-  labs(title='Comparison of EAF values', 
-       subtitle='Calculation code: 001')
+  labs(title='Calculation code: 001')
 ```
 
 
@@ -639,13 +637,12 @@ gg_ae_010 <- ggplot(ae_010, aes(excess_manual, excess_qsip)) +
        max(c(ae_010$excess_manual, ae_010$excess_qsip))) +
   ylim(min(c(ae_010$excess_manual, ae_010$excess_qsip)), 
        max(c(ae_010$excess_manual, ae_010$excess_qsip))) +
-  labs(title='Comparison of EAF values', 
-       subtitle='Calculation code: 010')
+  labs(title='Calculation code: 010')
 ```
 
 
 
-```{r, warning=F, echo=F, fig.width=3, fig.height=3}
+```{r, warning=F, echo=F}
 # calc code 011
 
 # combine new replicate numbers with data
@@ -714,20 +711,19 @@ gg_ae_011 <- ggplot(ae_011, aes(excess_manual, excess_qsip)) +
        max(c(ae_011$excess_manual, ae_011$excess_qsip))) +
   ylim(min(c(ae_011$excess_manual, ae_011$excess_qsip)), 
        max(c(ae_011$excess_manual, ae_011$excess_qsip))) +
-  labs(title='Comparison of EAF values', 
-       subtitle='Calculation code: 011')
+  labs(title='Calculation code: 011')
 ```
 
 
 
-```{r, warning=F, echo=F, fig.width=3, fig.height=3}
+```{r, warning=F, echo=F}
 # calc code 100
 
 mdq <- specify_qsip(mdq,
                     abund='qPCR.16S.copies.ul',
                     density='density.g.ml',
                     rep_group='group',
-                    rep_num='rep_number',
+                    rep_id='RepID',
                     iso='18O',
                     iso_trt='tmt')
 
@@ -787,14 +783,155 @@ gg_ae_100 <- ggplot(ae_100, aes(excess_manual, excess_qsip)) +
        max(c(ae_100$excess_manual, ae_100$excess_qsip))) +
   ylim(min(c(ae_100$excess_manual, ae_100$excess_qsip)), 
        max(c(ae_100$excess_manual, ae_100$excess_qsip))) +
-  labs(title='Comparison of EAF values', 
-       subtitle='Calculation code: 100')
+  labs(title='Calculation code: 100')
+```
+
+
+
+```{r, warning=F, echo=F}
+# calc code 101
+
+mdq <- specify_qsip(mdq,
+                    abund='qPCR.16S.copies.ul',
+                    density='density.g.ml',
+                    rep_id='RepID',
+                    rep_group='group',
+                    iso='18O',
+                    iso_trt='tmt')
+
+# calculate atom excess
+mdq <- calc_excess(mdq, separate_label=F, separate_light=T)
+
+# convert to data frame, use c() to remove attributes
+ae <- mat_to_df(mdq@qsip[['atom_excess']], 'excess')
+
+ae$group <- sub('^(\\w{1})(.*)', '\\1', ae$RepID)
+
+ae_qsip <- ae
+
+
+# manual calculation-------------------------------------------
+# add treatment (isotope) and group data for grouping
+ae <- merge(mw_101, unique(mdl[,c('RepID', 'tmt', 'group')]), all.x=T)
+
+# separate light and heavy MWs
+aeh <- ae[ae$tmt=='18O',]
+ael <- ae[ae$tmt=='16O',]
+
+# average heavy MWs by OTU, group, and treatment
+aeh <- aggregate(mw_manual ~ OTU + group, aeh, mean, na.rm=T)
+
+# calculate MW-heavymax
+adjust <- 12.07747
+nat_abund <- 0.002011429
+ael$mw_max <- (adjust + ael$mw_manual)
+
+# merge together, disregarding tmt
+ae <- merge(aeh, 
+            ael[,!names(ael) %in% 'tmt'],
+            by=c('group', 'OTU'),
+            suffixes=c('_label', '_light'))
+
+# calculate atom excess
+ae <- within(ae, {
+  excess <- ((mw_manual_label - mw_manual_light)/(mw_max - mw_manual_light)) * (1 - nat_abund)
+})
+
+
+# compare calculations-----------------------------------------
+ae_101 <- merge(ae_qsip,
+                ae[,c('RepID', 'group', 'OTU', 'excess')],
+                by=c('RepID', 'group', 'OTU'),
+                suffixes=c('_qsip', '_manual'))
+
+# plot qSIP output against manual output
+gg_ae_101 <- ggplot(ae_101, aes(excess_manual, excess_qsip)) +
+  geom_abline(aes(slope=1, intercept=0), color=hsv(0, 1, .8)) +
+  geom_point(color=hsv(.55, 1, .4)) +
+  xlab('Manual calculation') +
+  ylab('qSIP package') +
+  xlim(min(c(ae_101$excess_manual, ae_101$excess_qsip)), 
+       max(c(ae_101$excess_manual, ae_101$excess_qsip))) +
+  ylim(min(c(ae_101$excess_manual, ae_101$excess_qsip)), 
+       max(c(ae_101$excess_manual, ae_101$excess_qsip))) +
+  labs(title='Calculation code: 101')
+```
+
+
+
+```{r, warning=F, echo=F}
+# calc code 110
+
+mdq <- specify_qsip(mdq,
+                    abund='qPCR.16S.copies.ul',
+                    density='density.g.ml',
+                    rep_id='RepID',
+                    rep_group='group',
+                    iso='18O',
+                    iso_trt='tmt')
+
+# calculate atom excess
+mdq <- calc_excess(mdq, separate_label=F, separate_light=T)
+
+# convert to data frame, use c() to remove attributes
+ae <- mat_to_df(mdq@qsip[['atom_excess']], 'excess')
+
+ae$group <- sub('^(\\w{1})(.*)', '\\1', ae$RepID)
+
+ae_qsip <- ae
+
+
+# manual calculation-------------------------------------------
+# add treatment (isotope) and group data for grouping
+ae <- merge(mw_110, unique(mdl[,c('RepID', 'tmt', 'group')]), all.x=T)
+
+# separate light and heavy MWs
+aeh <- ae[ae$tmt=='18O',]
+ael <- ae[ae$tmt=='16O',]
+
+# average heavy MWs by OTU, group, and treatment
+aeh <- aggregate(mw_manual ~ OTU + group, aeh, mean, na.rm=T)
+
+# calculate MW-heavymax
+adjust <- 12.07747
+nat_abund <- 0.002011429
+ael$mw_max <- (adjust + ael$mw_manual)
+
+# merge together, disregarding tmt
+ae <- merge(aeh, 
+            ael[,!names(ael) %in% 'tmt'],
+            by=c('group', 'OTU'),
+            suffixes=c('_label', '_light'))
+
+# calculate atom excess
+ae <- within(ae, {
+  excess <- ((mw_manual_label - mw_manual_light)/(mw_max - mw_manual_light)) * (1 - nat_abund)
+})
+
+
+# compare calculations-----------------------------------------
+ae_110 <- merge(ae_qsip,
+                ae[,c('RepID', 'group', 'OTU', 'excess')],
+                by=c('RepID', 'group', 'OTU'),
+                suffixes=c('_qsip', '_manual'))
+
+# plot qSIP output against manual output
+gg_ae_110 <- ggplot(ae_110, aes(excess_manual, excess_qsip)) +
+  geom_abline(aes(slope=1, intercept=0), color=hsv(0, 1, .8)) +
+  geom_point(color=hsv(.55, 1, .4)) +
+  xlab('Manual calculation') +
+  ylab('qSIP package') +
+  xlim(min(c(ae_110$excess_manual, ae_110$excess_qsip)), 
+       max(c(ae_110$excess_manual, ae_110$excess_qsip))) +
+  ylim(min(c(ae_110$excess_manual, ae_110$excess_qsip)), 
+       max(c(ae_110$excess_manual, ae_110$excess_qsip))) +
+  labs(title='Calculation code: 110')
 ```
 
 
 ```{r, warning=F, echo=F, fig.height=9, fig.width=9}
 grid.arrange(layout_matrix=matrix(1:9, ncol=3, byrow=T),
              gg_ae_000, gg_ae_001, gg_ae_010,
-             gg_ae_011, gg_ae_100) # gg_ae_101,
+             gg_ae_011, gg_ae_100, gg_ae_101)
              # gg_ae_110, gg_ae_111)
 ```
